temporary fix for dark mode not working on iOS

--- a/public/globals.css
+++ b/public/globals.css
@@ -3,13 +3,20 @@ body {
   max-width: 650px;
   line-height: 1.6;
   font-size: 18px;
-  color: light-dark(#444, #bbb);
+  color: #444;
   padding: 0 10px;
 }
 a {
   text-decoration: none;
-  color: light-dark(#e14300, #ffc6ae);
+  color: #e14300;
 }
 a:hover {
   text-decoration: underline;
+}
+html[data-theme="dark"] > body {
+  color: #bbb;
+  background-color: #121212;
+}
+html[data-theme="dark"] a {
+  color: #ffc6ae;
 }
